--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -19,6 +19,7 @@ base64 = "0.13.0"
 serde = { version = "1.0.125", features = ["derive"] }
 ron = "0.6.4"
 sha256 = "1.0.2"
+getset = "0.1.1"
 
 [dependencies.zeroize]
 version = "1.3.0"
