--- a/gui/Cargo.toml
+++ b/gui/Cargo.toml
@@ -1,18 +1,15 @@
 [package]
-name = "pwduck"
+name = "pwduck_gui"
 version = "0.1.0"
 authors = ["Kaiden42 <gitlab@tinysn.com>"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
-[workspace]
-members = [
-    "core",
-    "gui"
-]
-
 [dependencies]
-pwduck_gui = { path = "./gui" }
+pwduck_core = {path = "../core"}
+iced = "0.3.0"
 async-trait = "0.1.50"
-rfd = "0.3.0"
+zeroize = "1.3.0"
+lazy_static = "1.4.0"
+getset = "0.1.1"
