--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -12,7 +12,7 @@ rand = { version = "0.8.3" }
 rand_chacha = "0.3.0"
 rand_core = "0.6.2"
 argon2 = { version = "0.2.0", features = ["zeroize"] }
-rust-crypto = "0.2.36"
+#rust-crypto = "0.2.36"
 base64 = "0.13.0"
 #zeroize = {version = "1.3.0", features = "zeroize_derive" }
 #zeroize_derive = "1.1.0"
@@ -20,6 +20,10 @@ serde = { version = "1.0.125", features = ["derive"] }
 ron = "0.6.4"
 sha256 = "1.0.2"
 getset = "0.1.1"
+
+aes = "0.7.2"
+chacha20 = "0.7.1"
+block-modes = "0.8.1"
 
 [dependencies.zeroize]
 version = "1.3.0"
