--- a/gui/Cargo.toml
+++ b/gui/Cargo.toml
@@ -13,3 +13,9 @@ async-trait = "0.1.50"
 zeroize = "1.3.0"
 lazy_static = "1.4.0"
 getset = "0.1.1"
+
+[dependencies.iced_aw]
+git = "https://github.com/iced-rs/iced_aw"
+rev = "7a6918a50fa6784ce7d11348b71ea4331d9d6200"
+default-features = false
+features = ["card", "modal"]
