--- a/gui/Cargo.toml
+++ b/gui/Cargo.toml
@@ -17,7 +17,7 @@ getset = "0.1.1"
 
 [dependencies.iced_aw]
 git = "https://github.com/iced-rs/iced_aw"
-#rev = "7a6918a50fa6784ce7d11348b71ea4331d9d6200"
-rev = "ef857dd56e8a68fbba9dfd8496455829d91d682c"
+#rev = "f93ebda66b54d183c366a7170029528a99dcf3f3"
+rev = "bb2a7562224b804ab2fa5e55d3a7e3677f9a26d1"
 default-features = false
-features = ["card", "modal", "tab_bar", "number_input"]
+features = ["card", "modal", "tab_bar", "number_input", "split"]
