--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -24,10 +24,11 @@ getset = "0.1.1"
 #zxcvbn = "2.1.1"
 #chbs_password_checker = "0.1.0"
 pw_entropy = { git = "https://github.com/Kaiden42/pw_entropy", rev = "d8d8305db936a94cc50bb770b8898f18f67faf71" }
-
 aes = "0.7.2"
 chacha20 = "0.7.1"
 block-modes = "0.8.1"
+pest = "2.1.3"
+pest_derive = "2.1.0"
 
 [dependencies.zeroize]
 version = "1.3.0"
