--- a/gui/Cargo.toml
+++ b/gui/Cargo.toml
@@ -14,6 +14,7 @@ async-trait = "0.1.50"
 zeroize = "1.3.0"
 lazy_static = "1.4.0"
 getset = "0.1.1"
+bitflags = "1.2.1"
 
 [dependencies.iced_aw]
 git = "https://github.com/iced-rs/iced_aw"
