--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -29,6 +29,7 @@ chacha20 = "0.7.1"
 block-modes = "0.8.1"
 pest = "2.1.3"
 pest_derive = "2.1.0"
+dirs = "3.0.2"
 
 [dependencies.zeroize]
 version = "1.3.0"
