--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -37,3 +37,6 @@ features = ["zeroize_derive"]
 
 [target.'cfg(not(windows))'.dependencies]
 rlimit = "0.5.4"
+
+[dev-dependencies]
+mocktopus = "0.7.11"
