--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -4,25 +4,19 @@ version = "0.1.0"
 authors = ["Kaiden42 <gitlab@tinysn.com>"]
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
 # seckey = "0.11.2" # Removed by own version
 seckey = { git="https://github.com/Kaiden42/seckey", features = ["mlock"]}
+zeroize = { version = "1.3.0", features = ["zeroize_derive"]}
 rand = { version = "0.8.3" }
 rand_chacha = "0.3.0"
 rand_core = "0.6.2"
 argon2 = { version = "0.2.0", features = ["zeroize"] }
-#rust-crypto = "0.2.36"
 base64 = "0.13.0"
-#zeroize = {version = "1.3.0", features = "zeroize_derive" }
-#zeroize_derive = "1.1.0"
 serde = { version = "1.0.125", features = ["derive"] }
 ron = "0.6.4"
 sha256 = "1.0.2"
 getset = "0.1.1"
-#zxcvbn = "2.1.1"
-#chbs_password_checker = "0.1.0"
 pw_entropy = { git = "https://github.com/Kaiden42/pw_entropy", rev = "d8d8305db936a94cc50bb770b8898f18f67faf71" }
 aes = "0.7.2"
 chacha20 = "0.7.1"
@@ -31,10 +25,6 @@ pest = "2.1.3"
 pest_derive = "2.1.0"
 dirs = "3.0.2"
 lazy_static = "1.4.0"
-
-[dependencies.zeroize]
-version = "1.3.0"
-features = ["zeroize_derive"]
 
 [target.'cfg(not(windows))'.dependencies]
 rlimit = "0.5.4"
