--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 
 [dependencies]
 # seckey = "0.11.2" # Removed by own version
-seckey = { git="https://github.com/Kaiden42/seckey", features = ["mlock"]}
+seckey = { git="https://github.com/Kaiden42/seckey", rev = "e6dd63c3957c65200fd5deb2909c3140a9b641a9", features = ["mlock"]}
 zeroize = { version = "1.3.0", features = ["zeroize_derive"]}
 rand = { version = "0.8.3" }
 rand_chacha = "0.3.0"
