Mention license in Cargo.toml

--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -3,6 +3,7 @@ name = "pwduck_core"
 version = "0.1.0"
 authors = ["Kaiden42 <gitlab@tinysn.com>"]
 edition = "2021"
+license = "MIT"
 
 [dependencies]
 # seckey = "0.11.2" # Removed by own version
